# mageslam

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md
Core/MAGESLAM/: CMakeLists.txt
Core/MAGESLAM/Source/: MAGESlam.cpp  MageSettings.h  MageSlam.h  MageUtil.cpp  MageUtil.h
Core/MAGESLAM/Source/Analysis/: DataFlow.cpp  DataFlow.h  DataPoints.h  binary_iterators.h
Core/MAGESLAM/Source/BoW/: BaseBow.h  BaseFeatureMatcher.h  OnlineBow.cpp  OnlineBow.h  OnlineBowFeatureMatcher.cpp  OnlineBowFeatureMatcher.h
Core/MAGESLAM/Source/BundleAdjustment/: BundleAdjust.cpp  BundleAdjust.h
Core/MAGESLAM/Source/Clouds/: DeNoising.cpp  DeNoising.h
Core/MAGESLAM/Source/Containers/: GenericContainers.h  MapPointAssociations.cpp  MapPointAssociations.h
Core/MAGESLAM/Source/Data/: Data.h  FrameData.h  HistoricalPose.cpp  HistoricalPose.h  InternalDepth.h  Intrinsics.cpp  Intrinsics.h  Keyframe.cpp  Keyframe.h  MapState.h  Operators.h  Pose.cpp  Pose.h  Tether.h  TimeUnits.h  Types.cpp  Types.h
Core/MAGESLAM/Source/Debugging/: Introspection.h  Introspector.h  SkeletonData.h  SkeletonKey.cpp  SkeletonKey.h  SkeletonLogger.cpp  SkeletonLogger.h
Core/MAGESLAM/Source/Device/: CameraCalibration.cpp  CameraCalibration.h  Device.cpp  Device.h  IMUCharacterization.h  SupportedDevices.cpp  SupportedDevices.h
Core/MAGESLAM/Source/Fuser/: Fuser.cpp  Fuser.h  FuserStubs.cpp  ImuMath.h  Interfaces.h  PoseInterpolator.cpp  PoseInterpolator.h  UnfilteredIMU.cpp  UnfilteredIMU.h
Core/MAGESLAM/Source/Image/: AnalyzedImage.h  ImageData.h  ImageFactory.h  ImagePreprocessor.cpp  ImagePreprocessor.h  KeypointSpatialIndex.cpp  KeypointSpatialIndex.h  ORBDescriptor.h  OpenCVModified.cpp  OpenCVModified.h  OrbFeatureDetector.cpp  OrbFeatureDetector.h
Core/MAGESLAM/Source/Map/: CovisibilityGraph.cpp  CovisibilityGraph.h  InitializationData.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  MappingKeyframe.h  MappingMath.h  PoseHistory.cpp  PoseHistory.h  SpanningTree.cpp  SpanningTree.h  ThreadSafeMap.cpp  ThreadSafeMap.h  ThreadSafePoseHistory.cpp  ThreadSafePoseHistory.h
Core/MAGESLAM/Source/Mapping/: MapPointKeyframeAssociations.h  NewMapPointsCreation.cpp  NewMapPointsCreation.h
Core/MAGESLAM/Source/Memory/: allocation.h  allocation_scope.h  allocator_traits.h  allocators.h  block.h  debug_check_fail.h  debug_electric_fence.h  debug_memory_marking_allocator.h  debug_tracking_allocator.h  fallback_allocator.h  free_list.h  mallocator.h  non_deallocating_allocator.h  non_owning_stack_allocator.h  passthrough_allocator.h  stack_allocator.h  std_allocator.h
Core/MAGESLAM/Source/Plat/: MiraAssert.h  TimeDefinitions.h
Core/MAGESLAM/Source/Platform/: Platform.h  Windows.cpp
Core/MAGESLAM/Source/Proxies/: GenericFields.h  KeyframeFields.h  KeyframeProxy.h  MapPointFields.h  MapPointProxy.h  Proxy.h  ProxyFactory.h
Core/MAGESLAM/Source/Serialization/: BinarySerializer.cpp  BinarySerializer.h  binary_magestream.h  cv_serialization.h  hybrid_magestream.h
Core/MAGESLAM/Source/Stereo/: StereoMapInit.cpp  StereoMapInit.h
Core/MAGESLAM/Source/Tasks/: BaseWorker.cpp  BaseWorker.h  FuserWorker.cpp  FuserWorker.h  IMUPosePriorProvider.cpp  IMUPosePriorProvider.h  ImageAnalyzer.cpp  ImageAnalyzer.h  ImageData.h  InitializationWorker.cpp  InitializationWorker.h  LoopClosureWorker.cpp  LoopClosureWorker.h  MageContext.h  MappingWorker.cpp  MappingWorker.h  MotionModelPriorProvider.cpp  MotionModelPriorProvider.h  PoseEstimationWorker.cpp  PoseEstimationWorker.h  Runtime.cpp  Runtime.h  Schedule.cpp  Schedule.h  StereoInitializationWorker.cpp  StereoInitializationWorker.h  TrackLocalMapWorker.cpp  TrackLocalMapWorker.h  TrackingEvents.h
Core/MAGESLAM/Source/Tracking/: BoundingPlaneDepths.cpp  BoundingPlaneDepths.h  ComputeEssential.cpp  ComputeEssential.h  FeatureMatcher.cpp  FeatureMatcher.h  IPosePriorProvider.h  KeyframeBuilder.cpp  KeyframeBuilder.h  MapInitialization.cpp  MapInitialization.h  NewKeyFrameDecision.cpp  NewKeyFrameDecision.h  PoseEstimator.cpp  PoseEstimator.h  Reprojection.cpp  Reprojection.h  TrackLocalMap.cpp  TrackLocalMap.h  Triangulation.cpp  Triangulation.h
Core/MAGESLAM/Source/Utils/: CameraConfiguration.h  Constants.h  Epipolar.cpp  Epipolar.h  Logging.h  MageConversions.cpp  MageConversions.h  ValidateBuildFlavor.cpp  ValidateBuildFlavor.h  buffer.h  collection.h  cv.cpp  cv.h  date_assert.h  eigen.h  flag.h  format.h  historical_queue.h  id_generator.h  not_null.h  range.h  single_item_concurrent_queue.h  stack_vector.h  thread_memory.h
Core/MAGESLAM/Source/VolumeOfInterest/: VolumeOfInterest.cpp  VolumeOfInterest.h
Dependencies/: CMakeLists.txt
Dependencies/Arcana/: CMakeLists.txt
Dependencies/Arcana/Shared.Test/: AlgorithmUnitTest.cpp  EitherUnitTest.cpp  ExpectedUnitTest.cpp  InplaceFunctionUnitTest.cpp  PropertyBagUnitTest.cpp  RefcountTest.cpp  TypeTraitsTest.cpp
Dependencies/Arcana/Shared.Test/Analysis/: AnalysisUnitTest.cpp
Dependencies/Arcana/Shared.Test/Containers/: ContainerUnitTest.cpp
Dependencies/Arcana/Shared.Test/Experimental/: ArrayUnitTest.cpp
Dependencies/Arcana/Shared.Test/Messaging/: MediatorUnitTest.cpp
Dependencies/Arcana/Shared.Test/Scheduling/: SchedulingUnitTest.cpp
Dependencies/Arcana/Shared.Test/Threading/: CoroutineTests.cpp  DispatcherUnitTest.cpp  TaskUnitTest.cpp
Dependencies/Arcana/Shared/arcana/: either.h  errors.cpp  errors.h  exceptions.h  expected.h  finally_scope.h  function_view.h  iterators.h  macros.h  math.h  mixin_ptr.h  path.h  propertybag.h  reference_counter.h  sentry.h  (+3 more)
Dependencies/BoostHeaders/: CMakeLists.txt
Dependencies/BundlerLib/: CMakeLists.txt
Dependencies/BundlerLib/Include/: BundlerLib.h  PoseGraphOptimizer.h
Dependencies/BundlerLib/Source/: BundlerLib.cpp  PoseGraphOptimizer.cpp
Dependencies/FuserLib/: CMakeLists.txt
Dependencies/FuserLib/Include/: FuserLib.h  LegacySerialization.h  SensorFilter.h  SensorSample.h  SensorSampleQueue.h  SensorSampleSerializable.h  TimeUnits.h  pch.h
Dependencies/FuserLib/Source/: LegacySerialization.cpp  SensorSample.cpp  SensorSampleQueue.cpp
(+69 files in other folders)
