# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

set(LIBRARY_NAME "MAGESLAM")

find_package(OpenCV REQUIRED)

set(SOURCES
    "Source/Analysis/binary_iterators.h"
    "Source/Analysis/DataFlow.cpp"
    "Source/Analysis/DataFlow.h"
    "Source/Analysis/DataPoints.h"
    "Source/BoW/BaseBow.h"
    "Source/BoW/BaseFeatureMatcher.h"
    "Source/BoW/OnlineBow.cpp"
    "Source/BoW/OnlineBow.h"
    "Source/BoW/OnlineBowFeatureMatcher.cpp"
    "Source/BoW/OnlineBowFeatureMatcher.h"
    "Source/BundleAdjustment/BundleAdjust.cpp"
    "Source/BundleAdjustment/BundleAdjust.h"
    "Source/Clouds/DeNoising.cpp"
    "Source/Clouds/DeNoising.h"
    "Source/Containers/GenericContainers.h"
    "Source/Containers/MapPointAssociations.cpp"
    "Source/Containers/MapPointAssociations.h"
    "Source/Data/Data.h"
    "Source/Data/FrameData.h"
    "Source/Data/HistoricalPose.cpp"
    "Source/Data/HistoricalPose.h"
    "Source/Data/InternalDepth.h"
    "Source/Data/Intrinsics.cpp"
    "Source/Data/Intrinsics.h"
    "Source/Data/Keyframe.cpp"
    "Source/Data/Keyframe.h"
    "Source/Data/MapState.h"
    "Source/Data/Operators.h"
    "Source/Data/Pose.cpp"
    "Source/Data/Pose.h"
    "Source/Data/Tether.h"
    "Source/Data/TimeUnits.h"
    "Source/Data/Types.cpp"
    "Source/Data/Types.h"
    "Source/Debugging/Introspection.h"
    "Source/Debugging/Introspector.h"
    "Source/Debugging/SkeletonData.h"
    "Source/Debugging/SkeletonKey.cpp"
    "Source/Debugging/SkeletonKey.h"
    "Source/Debugging/SkeletonLogger.cpp"
    "Source/Debugging/SkeletonLogger.h"
    "Source/Device/CameraCalibration.cpp"
    "Source/Device/CameraCalibration.h"
    "Source/Device/Device.cpp"
    "Source/Device/Device.h"
    "Source/Device/IMUCharacterization.h"
    "Source/Device/SupportedDevices.cpp"
    "Source/Device/SupportedDevices.h"
    # TODO: Fuser "Source/Fuser/Fuser.cpp"
    "Source/Fuser/FuserStubs.cpp"
    "Source/Fuser/Fuser.h"
    "Source/Fuser/ImuMath.h"
    "Source/Fuser/Interfaces.h"
    "Source/Fuser/PoseInterpolator.cpp"
    "Source/Fuser/PoseInterpolator.h"
    "Source/Fuser/UnfilteredIMU.cpp"
    "Source/Fuser/UnfilteredIMU.h"
    "Source/Image/AnalyzedImage.h"
    "Source/Image/ImageData.h"
    "Source/Image/ImageFactory.h"
    "Source/Image/ImagePreprocessor.cpp"
    "Source/Image/ImagePreprocessor.h"
    "Source/Image/KeypointSpatialIndex.cpp"
    "Source/Image/KeypointSpatialIndex.h"
    "Source/Image/OpenCVModified.cpp"
    "Source/Image/OpenCVModified.h"
    "Source/Image/ORBDescriptor.h"
    "Source/Image/OrbFeatureDetector.cpp"
    "Source/Image/OrbFeatureDetector.h"
    "Source/Map/CovisibilityGraph.cpp"
    "Source/Map/CovisibilityGraph.h"
    "Source/Map/InitializationData.h"
    "Source/Map/Map.cpp"
    "Source/Map/Map.h"
    "Source/Map/MappingKeyframe.h"
    "Source/Map/MappingMath.h"
    "Source/Map/MapPoint.cpp"
    "Source/Map/MapPoint.h"
    "Source/Map/PoseHistory.cpp"
    "Source/Map/PoseHistory.h"
    "Source/Map/SpanningTree.cpp"
    "Source/Map/SpanningTree.h"
    "Source/Map/ThreadSafeMap.cpp"
    "Source/Map/ThreadSafeMap.h"
    "Source/Map/ThreadSafePoseHistory.cpp"
    "Source/Map/ThreadSafePoseHistory.h"
    "Source/Mapping/MapPointKeyframeAssociations.h"
    "Source/Mapping/NewMapPointsCreation.cpp"
    "Source/Mapping/NewMapPointsCreation.h"
    "Source/Memory/allocation.h"
    "Source/Memory/allocation_scope.h"
    "Source/Memory/allocator_traits.h"
    "Source/Memory/allocators.h"
    "Source/Memory/block.h"
    "Source/Memory/debug_check_fail.h"
    "Source/Memory/debug_electric_fence.h"
    "Source/Memory/debug_memory_marking_allocator.h"
    "Source/Memory/debug_tracking_allocator.h"
    "Source/Memory/fallback_allocator.h"
    "Source/Memory/free_list.h"
    "Source/Memory/mallocator.h"
    "Source/Memory/non_deallocating_allocator.h"
    "Source/Memory/non_owning_stack_allocator.h"
    "Source/Memory/passthrough_allocator.h"
    "Source/Memory/stack_allocator.h"
    "Source/Memory/std_allocator.h"
    "Source/Platform/Platform.h"
    "Source/Platform/Windows.cpp"
    "Source/Proxies/GenericFields.h"
    "Source/Proxies/KeyframeFields.h"
    "Source/Proxies/KeyframeProxy.h"
    "Source/Proxies/MapPointFields.h"
    "Source/Proxies/MapPointProxy.h"
    "Source/Proxies/Proxy.h"
    "Source/Proxies/ProxyFactory.h"
    "Source/Serialization/binary_magestream.h"
    "Source/Serialization/BinarySerializer.cpp"
    "Source/Serialization/BinarySerializer.h"
    "Source/Serialization/cv_serialization.h"
    "Source/Serialization/hybrid_magestream.h"
    "Source/Stereo/StereoMapInit.cpp"
    "Source/Stereo/StereoMapInit.h"
    "Source/Tasks/BaseWorker.cpp"
    "Source/Tasks/BaseWorker.h"
    "Source/Tasks/FuserWorker.cpp"
    "Source/Tasks/FuserWorker.h"
    "Source/Tasks/ImageAnalyzer.cpp"
    "Source/Tasks/ImageAnalyzer.h"
    "Source/Tasks/ImageData.h"
    "Source/Tasks/IMUPosePriorProvider.cpp"
    "Source/Tasks/IMUPosePriorProvider.h"
    "Source/Tasks/InitializationWorker.cpp"
    "Source/Tasks/InitializationWorker.h"
    "Source/Tasks/LoopClosureWorker.cpp"
    "Source/Tasks/LoopClosureWorker.h"
    "Source/Tasks/MageContext.h"
    "Source/Tasks/MappingWorker.cpp"
    "Source/Tasks/MappingWorker.h"
    "Source/Tasks/MotionModelPriorProvider.cpp"
    "Source/Tasks/MotionModelPriorProvider.h"
    "Source/Tasks/PoseEstimationWorker.cpp"
    "Source/Tasks/PoseEstimationWorker.h"
    "Source/Tasks/Runtime.cpp"
    "Source/Tasks/Runtime.h"
    "Source/Tasks/Schedule.cpp"
    "Source/Tasks/Schedule.h"
    "Source/Tasks/StereoInitializationWorker.cpp"
    "Source/Tasks/StereoInitializationWorker.h"
    "Source/Tasks/TrackingEvents.h"
    "Source/Tasks/TrackLocalMapWorker.cpp"
    "Source/Tasks/TrackLocalMapWorker.h"
    "Source/Tracking/BoundingPlaneDepths.cpp"
    "Source/Tracking/BoundingPlaneDepths.h"
    "Source/Tracking/ComputeEssential.cpp"
    "Source/Tracking/ComputeEssential.h"
    "Source/Tracking/FeatureMatcher.cpp"
    "Source/Tracking/FeatureMatcher.h"
    "Source/Tracking/IPosePriorProvider.h"
    "Source/Tracking/KeyframeBuilder.cpp"
    "Source/Tracking/KeyframeBuilder.h"
    "Source/Tracking/MapInitialization.cpp"
    "Source/Tracking/MapInitialization.h"
    "Source/Tracking/NewKeyFrameDecision.cpp"
    "Source/Tracking/NewKeyFrameDecision.h"
    "Source/Tracking/PoseEstimator.cpp"
    "Source/Tracking/PoseEstimator.h"
    "Source/Tracking/Reprojection.cpp"
    "Source/Tracking/Reprojection.h"
    "Source/Tracking/TrackLocalMap.cpp"
    "Source/Tracking/TrackLocalMap.h"
    "Source/Tracking/Triangulation.cpp"
    "Source/Tracking/Triangulation.h"
    "Source/Utils/IO/csv_stream.h"
    "Source/Utils/IO/validating_stream.h"
    "Source/Utils/buffer.h"
    "Source/Utils/CameraConfiguration.h"
    "Source/Utils/collection.h"
    "Source/Utils/Constants.h"
    "Source/Utils/cv.cpp"
    "Source/Utils/cv.h"
    "Source/Utils/date_assert.h"
    "Source/Utils/eigen.h"
    "Source/Utils/Epipolar.cpp"
    "Source/Utils/Epipolar.h"
    "Source/Utils/flag.h"
    "Source/Utils/format.h"
    "Source/Utils/historical_queue.h"
    "Source/Utils/id_generator.h"
    "Source/Utils/Logging.h"
    "Source/Utils/MageConversions.cpp"
    "Source/Utils/MageConversions.h"
    "Source/Utils/not_null.h"
    "Source/Utils/range.h"
    "Source/Utils/single_item_concurrent_queue.h"
    "Source/Utils/stack_vector.h"
    "Source/Utils/thread_memory.h"
    "Source/Utils/ValidateBuildFlavor.cpp"
    "Source/Utils/ValidateBuildFlavor.h"
    "Source/VolumeOfInterest/VolumeOfInterest.cpp"
    "Source/VolumeOfInterest/VolumeOfInterest.h"
    "Source/MageSettings.h"
    "Source/MageSlam.cpp"
    "Source/MageSlam.h"
    "Source/MageUtil.cpp"
    "Source/MageUtil.h")

add_library(${LIBRARY_NAME} ${SOURCES})

target_include_directories(${LIBRARY_NAME} PUBLIC "Source")

target_link_libraries(${LIBRARY_NAME}
    PUBLIC Arcana
    PUBLIC opencv_world
    PUBLIC Eigen
    PUBLIC BundlerLib
    PUBLIC FuserLib)

target_compile_definitions(${LIBRARY_NAME} PRIVATE NOMINMAX _ENABLE_EXTENDED_ALIGNED_STORAGE)

set_property(TARGET ${LIBRARY_NAME} PROPERTY FOLDER Core)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
