# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

add_library(BoostHeaders INTERFACE)

set(BOOST_DIR "../boost")
target_include_directories(BoostHeaders INTERFACE
    "${BOOST_DIR}/libs/accumulators/include"
    "${BOOST_DIR}/libs/algorithm/include"
    "${BOOST_DIR}/libs/align/include"
    "${BOOST_DIR}/libs/any/include"
    "${BOOST_DIR}/libs/array/include"
    "${BOOST_DIR}/libs/asio/include"
    "${BOOST_DIR}/libs/assert/include"
    "${BOOST_DIR}/libs/assign/include"
    "${BOOST_DIR}/libs/atomic/include"
    "${BOOST_DIR}/libs/beast/include"
    "${BOOST_DIR}/libs/bimap/include"
    "${BOOST_DIR}/libs/bind/include"
    "${BOOST_DIR}/libs/callable_traits/include"
    "${BOOST_DIR}/libs/chrono/include"
    "${BOOST_DIR}/libs/circular_buffer/include"
    "${BOOST_DIR}/libs/compatibility/include"
    "${BOOST_DIR}/libs/compute/include"
    "${BOOST_DIR}/libs/concept_check/include"
    "${BOOST_DIR}/libs/config/include"
    "${BOOST_DIR}/libs/container/include"
    "${BOOST_DIR}/libs/container_hash/include"
    "${BOOST_DIR}/libs/context/include"
    "${BOOST_DIR}/libs/contract/include"
    "${BOOST_DIR}/libs/conversion/include"
    "${BOOST_DIR}/libs/convert/include"
    "${BOOST_DIR}/libs/core/include"
    "${BOOST_DIR}/libs/coroutine/include"
    "${BOOST_DIR}/libs/coroutine2/include"
    "${BOOST_DIR}/libs/crc/include"
    "${BOOST_DIR}/libs/date_time/include"
    "${BOOST_DIR}/libs/detail/include"
    "${BOOST_DIR}/libs/disjoint_sets/include"
    "${BOOST_DIR}/libs/dll/include"
    "${BOOST_DIR}/libs/dynamic_bitset/include"
    "${BOOST_DIR}/libs/endian/include"
    "${BOOST_DIR}/libs/exception/include"
    "${BOOST_DIR}/libs/fiber/include"
    "${BOOST_DIR}/libs/filesystem/include"
    "${BOOST_DIR}/libs/flyweight/include"
    "${BOOST_DIR}/libs/foreach/include"
    "${BOOST_DIR}/libs/format/include"
    "${BOOST_DIR}/libs/function/include"
    "${BOOST_DIR}/libs/functional/include"
    "${BOOST_DIR}/libs/function_types/include"
    "${BOOST_DIR}/libs/fusion/include"
    "${BOOST_DIR}/libs/geometry/include"
    "${BOOST_DIR}/libs/gil/include"
    "${BOOST_DIR}/libs/graph/include"
    "${BOOST_DIR}/libs/graph_parallel/include"
    "${BOOST_DIR}/libs/hana/include"
    "${BOOST_DIR}/libs/heap/include"
    "${BOOST_DIR}/libs/hof/include"
    "${BOOST_DIR}/libs/icl/include"
    "${BOOST_DIR}/libs/integer/include"
    "${BOOST_DIR}/libs/interprocess/include"
    "${BOOST_DIR}/libs/intrusive/include"
    "${BOOST_DIR}/libs/io/include"
    "${BOOST_DIR}/libs/iostreams/include"
    "${BOOST_DIR}/libs/iterator/include"
    "${BOOST_DIR}/libs/lambda/include"
    "${BOOST_DIR}/libs/lexical_cast/include"
    "${BOOST_DIR}/libs/locale/include"
    "${BOOST_DIR}/libs/local_function/include"
    "${BOOST_DIR}/libs/lockfree/include"
    "${BOOST_DIR}/libs/log/include"
    "${BOOST_DIR}/libs/logic/include"
    "${BOOST_DIR}/libs/math/include"
    "${BOOST_DIR}/libs/metaparse/include"
    "${BOOST_DIR}/libs/move/include"
    "${BOOST_DIR}/libs/mp11/include"
    "${BOOST_DIR}/libs/mpi/include"
    "${BOOST_DIR}/libs/mpl/include"
    "${BOOST_DIR}/libs/msm/include"
    "${BOOST_DIR}/libs/multiprecision/include"
    "${BOOST_DIR}/libs/multi_array/include"
    "${BOOST_DIR}/libs/multi_index/include"
    "${BOOST_DIR}/libs/numeric/conversion/include"
    "${BOOST_DIR}/libs/numeric/interval/include"
    "${BOOST_DIR}/libs/numeric/odeint/include"
    "${BOOST_DIR}/libs/numeric/ublas/include"
    "${BOOST_DIR}/libs/optional/include"
    "${BOOST_DIR}/libs/parameter/include"
    "${BOOST_DIR}/libs/phoenix/include"
    "${BOOST_DIR}/libs/polygon/include"
    "${BOOST_DIR}/libs/poly_collection/include"
    "${BOOST_DIR}/libs/pool/include"
    "${BOOST_DIR}/libs/predef/include"
    "${BOOST_DIR}/libs/preprocessor/include"
    "${BOOST_DIR}/libs/process/include"
    "${BOOST_DIR}/libs/program_options/include"
    "${BOOST_DIR}/libs/property_map/include"
    "${BOOST_DIR}/libs/property_tree/include"
    "${BOOST_DIR}/libs/proto/include"
    "${BOOST_DIR}/libs/ptr_container/include"
    "${BOOST_DIR}/libs/python/include"
    "${BOOST_DIR}/libs/qvm/include"
    "${BOOST_DIR}/libs/random/include"
    "${BOOST_DIR}/libs/range/include"
    "${BOOST_DIR}/libs/ratio/include"
    "${BOOST_DIR}/libs/rational/include"
    "${BOOST_DIR}/libs/regex/include"
    "${BOOST_DIR}/libs/scope_exit/include"
    "${BOOST_DIR}/libs/serialization/include"
    "${BOOST_DIR}/libs/signals/include"
    "${BOOST_DIR}/libs/signals2/include"
    "${BOOST_DIR}/libs/smart_ptr/include"
    "${BOOST_DIR}/libs/sort/include"
    "${BOOST_DIR}/libs/spirit/include"
    "${BOOST_DIR}/libs/stacktrace/include"
    "${BOOST_DIR}/libs/statechart/include"
    "${BOOST_DIR}/libs/static_assert/include"
    "${BOOST_DIR}/libs/system/include"
    "${BOOST_DIR}/libs/test/include"
    "${BOOST_DIR}/libs/thread/include"
    "${BOOST_DIR}/libs/throw_exception/include"
    "${BOOST_DIR}/libs/timer/include"
    "${BOOST_DIR}/libs/tokenizer/include"
    "${BOOST_DIR}/libs/tti/include"
    "${BOOST_DIR}/libs/tuple/include"
    "${BOOST_DIR}/libs/typeof/include"
    "${BOOST_DIR}/libs/type_erasure/include"
    "${BOOST_DIR}/libs/type_index/include"
    "${BOOST_DIR}/libs/type_traits/include"
    "${BOOST_DIR}/libs/units/include"
    "${BOOST_DIR}/libs/unordered/include"
    "${BOOST_DIR}/libs/utility/include"
    "${BOOST_DIR}/libs/uuid/include"
    "${BOOST_DIR}/libs/variant/include"
    "${BOOST_DIR}/libs/vmd/include"
    "${BOOST_DIR}/libs/wave/include"
    "${BOOST_DIR}/libs/winapi/include"
    "${BOOST_DIR}/libs/xpressive/include")
